# AgentProof

./: .env.example  .gitignore  README.md  agentproof.yaml  agentproof.yaml.example  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  regression.yml
.serena/: project.yml
baselines/: demo-research-agent.json
dashboard/: .eslintrc.cjs  Dockerfile  index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
dashboard/src/: App.test.tsx  App.tsx  main.tsx  theme.ts
dashboard/src/api/: client.test.ts  client.ts
demo_agent/: pyproject.toml
demo_agent/demo_agent/: __init__.py  __main__.py  cli.py  corpus.py  export.py  graph.py  llm.py  nodes.py  scenarios.py
demo_agent/demo_agent/fixtures/: replay_responses.json
demo_agent/tests/: test_cli.py  test_corpus.py  test_export.py  test_graph.py  test_integration.py  test_llm.py  test_nodes.py  test_scenarios.py
docs/: handover-phase-6.md  handover-phase-7.md  walkthrough.md
docs/design/: 2026-06-14-eval-engine-design.md  2026-06-18-security-eval-module-design.md  2026-06-20-regression-detector-ci-design.md  2026-06-22-dashboard-design.md  2026-06-23-demo-agent-design.md
fixtures/: regression_config.yaml  regression_corpus.json
scripts/: seed_dashboard.py  test_seed_dashboard.py
sdk/: pyproject.toml
sdk/agentproof/: __init__.py  client.py  context.py  exporters.py  pricing.py  spans.py
sdk/agentproof/adapters/: langgraph.py
sdk/tests/: test_client_flush.py  test_context.py  test_langgraph_adapter.py  test_placeholder.py  test_spans.py
server/: Dockerfile  alembic.ini  pyproject.toml
server/agentproof_server/: config.py  main.py
server/agentproof_server/api/: evals.py  serialization.py  traces.py
server/agentproof_server/db/: models.py  session.py
server/agentproof_server/db/migrations/: env.py
server/agentproof_server/eval_engine/: baseline.py  cli.py  composite.py  config_parser.py  deterministic.py  llm_judge.py  models.py  regression.py  runner.py  security.py  security_patterns.py
server/agentproof_server/scripts_pkg/: regression_fixtures.py  seed_demo_traces.py
server/tests/integration/: test_eval_pipeline.py  test_trace_pipeline.py
server/tests/unit/: test_baseline.py  test_cli.py  test_composite.py  test_config_parser.py  test_deterministic.py  test_eval_models.py  test_evals_api.py  test_llm_judge.py  test_regression_cli.py  test_regression_detect.py  test_regression_fixtures.py  test_regression_models.py  test_regression_stats.py  test_runner.py  test_security.py  test_security_patterns.py  test_seed_demo_traces.py  test_serialization.py
(+32 files in other folders)
