[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentproof-demo-agent"
version = "0.1.0"
description = "Demo research-assistant agent for AgentProof"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",
    "langgraph>=0.2.0",
    "chromadb>=0.5.0",
    "pyyaml>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["demo_agent"]