[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentproof-demo-agent"
version = "0.1.0"
description = "Demo research-assistant agent for AgentProof"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.0",
    "anthropic>=0.40",
    "httpx>=0.27",
    "agentproof",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["demo_agent"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
