[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentproof-server"
version = "0.1.0"
description = "AgentProof server: trace storage, eval engine, and API"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9",
    "alembic>=1.13.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.1",
    "anthropic>=0.40.0",
    "numpy>=1.26",
    "scipy>=1.12",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.25.0",
    "ruff>=0.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["agentproof_server"]